// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Popover should pass additional props to portaled element 1`] = `
<span>
  <div
    tabindex="-1"
  >
    <div>
      <div
        class="components-popover is-bottom is-center components-animate__appear is-from-top"
        role="tooltip"
        style=""
      >
        <div
          class="components-popover__content"
          tabindex="-1"
        >
          Hello
        </div>
      </div>
    </div>
  </div>
</span>
`;

exports[`Popover should render content 1`] = `
<span>
  <div
    tabindex="-1"
  >
    <div>
      <div
        class="components-popover is-bottom is-center components-animate__appear is-from-top"
        style=""
      >
        <div
          class="components-popover__content"
          tabindex="-1"
        >
          Hello
        </div>
      </div>
    </div>
  </div>
</span>
`;
